--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -20,7 +20,7 @@
       #ffcfd1 51.55%,
       #f3c6f1 90.85%
     );
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
